[gd_scene load_steps=9 format=2]

[ext_resource path="res://Ball.gd" type="Script" id=1]
[ext_resource path="res://greenBall.png" type="Texture" id=2]
[ext_resource path="res://Node2D.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 512.436, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.62344, 299.089 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 508.715, 9.66125 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.72968, 302.476 )

[sub_resource type="CircleShape2D" id=5]
radius = 14.433

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="WallTop" type="Area2D" parent="."]
position = Vector2( 1, 0 )

[node name="Polygon2D" type="Polygon2D" parent="WallTop"]
position = Vector2( 0, 3.11183 )
scale = Vector2( 1, 0.975225 )
color = Color( 0.341176, 0.980392, 1, 1 )
polygon = PoolVector2Array( -0.556915, -2.68671, 1023.77, -2.85928, 1023.94, 15.3242, 512.947, 15.1271, 0.502548, 16.3836 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 513.505, 8.81083 )
shape = SubResource( 6 )

[node name="WallLeft" type="Area2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="WallLeft"]
color = Color( 0.341176, 0.980392, 1, 1 )
polygon = PoolVector2Array( 0.193283, -0.857303, 0.125, 599.625, 18.5134, 600.148, 17.4317, -0.857303 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
position = Vector2( 9.41959, 299.578 )
shape = SubResource( 2 )

[node name="WallBottom" type="Area2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="WallBottom"]
position = Vector2( 0, 245.742 )
scale = Vector2( 1, 0.588714 )
color = Color( 0.341176, 0.980392, 1, 1 )
polygon = PoolVector2Array( -0.46431, 570.41, 1022.25, 571.6, 1022.62, 603.634, -0.18441, 601.766 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2( 512.193, 591.356 )
shape = SubResource( 3 )

[node name="WallRight" type="Area2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="WallRight"]
position = Vector2( 258.874, 0 )
scale = Vector2( 0.747449, 1 )
color = Color( 0.341176, 0.980392, 1, 1 )
polygon = PoolVector2Array( 999.841, 1.16483, 1025.04, 2.42474, 1025.04, 600.887, 999.841, 602.147 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
position = Vector2( 1014.9, 299.786 )
shape = SubResource( 4 )

[node name="Ball" type="KinematicBody2D" parent="."]
input_pickable = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Ball"]
position = Vector2( 512.147, 318.087 )
scale = Vector2( 0.141129, 0.141129 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2( 511.913, 318.179 )
shape = SubResource( 5 )
[connection signal="body_entered" from="WallTop" to="." method="_on_WallTop_body_entered"]
[connection signal="body_exited" from="WallTop" to="." method="_on_WallTop_body_exited"]
[connection signal="body_entered" from="WallLeft" to="." method="_on_WallLeft_body_entered"]
[connection signal="body_exited" from="WallLeft" to="." method="_on_WallLeft_body_exited"]
[connection signal="body_entered" from="WallBottom" to="." method="_on_WallBottom_body_entered"]
[connection signal="body_exited" from="WallBottom" to="." method="_on_WallBottom_body_exited"]
[connection signal="body_entered" from="WallRight" to="." method="_on_WallRight_body_entered"]
[connection signal="body_exited" from="WallRight" to="." method="_on_WallRight_body_exited"]
[connection signal="mouse_entered" from="Ball" to="Ball" method="_on_Ball_mouse_entered"]
[connection signal="mouse_exited" from="Ball" to="Ball" method="_on_Ball_mouse_exited"]
